small bugs fixed

--- a/app/src/main/res/layouts/login/layout/activity_doctor_connect.xml
+++ b/app/src/main/res/layouts/login/layout/activity_doctor_connect.xml
@@ -35,6 +35,7 @@
         android:visibility="gone"
         android:drawableLeft="@drawable/search"
         android:id="@+id/searchView"
+        android:inputType="text"
         android:drawablePadding="@dimen/dp4"
         android:hint="@string/search"
         android:layout_marginRight="@dimen/dp16"
