--- a/app/src/main/res/layouts/login/layout/activity_doctor_connect.xml
+++ b/app/src/main/res/layouts/login/layout/activity_doctor_connect.xml
@@ -10,41 +10,46 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-<LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:orientation="horizontal">
 
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dp16"
-        android:src="@drawable/ic_arrow_back_white_24dp"
-        tools:ignore="VectorDrawableCompat" />
-    <com.rescribe.doctor.ui.customesViews.CustomTextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        app:customFont="@string/roboto_bold"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:text="@string/doctor_connect"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp16"/>
-    <EditText
-        android:visibility="gone"
-        android:drawableLeft="@drawable/search"
-        android:id="@+id/searchView"
-        android:inputType="text"
-        android:drawablePadding="@dimen/dp4"
-        android:hint="@string/search"
-        android:layout_marginRight="@dimen/dp16"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp16"/>
-</LinearLayout>
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp16"
+                android:src="@drawable/ic_arrow_back_white_24dp"
+                tools:ignore="VectorDrawableCompat" />
+
+            <com.rescribe.doctor.ui.customesViews.CustomTextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/doctor_connect"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16"
+                android:visibility="visible"
+                app:customFont="@string/roboto_bold" />
+
+            <com.rescribe.doctor.ui.customesViews.EditTextWithDeleteButton
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/dp16"
+                android:drawableLeft="@drawable/search"
+                android:drawablePadding="@dimen/dp4"
+                android:inputType="text"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16"
+                android:visibility="gone"
+                app:deleteButtonRes="@drawable/icon_text_field_clear_btn"
+                app:hintText="@string/search" />
+        </LinearLayout>
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabsDoctorConnect"
             android:layout_width="match_parent"
