--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -38,11 +38,10 @@
             android:paddingRight="@dimen/dp30">
 
             <EditText
-                android:id="@+id/editTextMobileNo"
+                android:id="@+id/editTextEmailID"
                 style="@style/AppLoginNewMainStyle"
-                android:hint="@string/enter_mobile_no"
-                android:inputType="number"
-                android:maxLength="10"
+                android:hint="@string/enter_email_id"
+                android:inputType="textEmailAddress"
                 android:textStyle="bold"
                 android:typeface="sans" />
             <!--  Email Label -->
@@ -81,6 +80,7 @@
                 android:text="@string/using_otp"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp16"
+                android:visibility="invisible"
                 app:customFont="@string/roboto_medium" />
 
             <Button
@@ -146,7 +146,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp30"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
