--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,7 @@
     <dimen name="sp16">16sp</dimen>
     <dimen name="sp15">15sp</dimen>
     <dimen name="sp17">17sp</dimen>
+    <dimen name="dp42">42dp</dimen>
+    <dimen name="dp45">45dp</dimen>
+    <dimen name="dp48">48dp</dimen>
 </resources>
