--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/backButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp40"
+                android:layout_height="@dimen/dp40"
                 android:layout_centerVertical="true"
                 android:padding="@dimen/dp10"
                 android:src="@drawable/back_arrow_a_01" />
