--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -32,8 +32,8 @@
 
         <ImageView
             android:id="@+id/senderProfilePhoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp40"
+            android:layout_height="@dimen/dp40"
             android:layout_alignParentEnd="true"
             android:src="@drawable/welcome_copy_3"
             android:layout_alignParentRight="true" />
@@ -47,8 +47,8 @@
 
         <ImageView
             android:id="@+id/receiverProfilePhoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp40"
+            android:layout_height="@dimen/dp40"
             android:src="@drawable/welcome_copy_3" />
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
