--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             app:buttonBackgroundColor="@android:color/transparent"
-            app:buttonImage="@drawable/speak_reverce"
+            app:buttonImage="@drawable/speak"
             app:reverseSlide="true"
             app:slideBackgroundColor="@color/tagColor"
             app:slideText="@string/timing"
