--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="otp_background_layout">#EDF1F4</color>
     <color name="Gray">#736F6E</color>
     <color name="green_light">#0fd20b</color>
+    <color name="grey_300">#dcdcdc</color>
 </resources>
