--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,5 @@
     <dimen name="dp48">48dp</dimen>
     <dimen name="dp68">68dp</dimen>
     <dimen name="dp34">34dp</dimen>
+    <dimen name="dp14">14dp</dimen>
 </resources>
