--- a/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_chats_row_item.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_chats_row_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="@dimen/dp16"
     android:layout_marginEnd="@dimen/dp6"
     android:layout_marginLeft="@dimen/dp16"
@@ -20,27 +20,40 @@
         android:background="@color/white"
         android:orientation="horizontal">
         <!--  ListRow Left sied Thumbnail image -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <RelativeLayout
+            android:layout_width="@dimen/dp50"
+            android:layout_height="@dimen/dp50"
+            android:layout_marginEnd="@dimen/dp5"
+            android:layout_marginLeft="@dimen/dp16"
             android:layout_marginRight="@dimen/dp5"
+            android:layout_marginStart="@dimen/dp16"
             android:padding="3dip">
 
             <ImageView
                 android:id="@+id/imageOfDoctor"
-                android:layout_width="@dimen/dp40"
-                android:layout_height="@dimen/dp40"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dp16"
+                android:layout_width="@dimen/dp50"
+                android:layout_height="@dimen/dp50"
                 android:src="@drawable/layer_12" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/onlineStatusIcon"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:visibility="gone"
+                tools:visibility="visible"
+                app:srcCompat="@drawable/online_icon" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/dp10"
+            android:layout_marginStart="@dimen/dp10"
             android:layout_weight="1"
             android:gravity="center|left"
             android:orientation="vertical">
@@ -77,25 +90,25 @@
         <RelativeLayout
             android:layout_width="@dimen/dp50"
             android:layout_height="@dimen/dp56"
-            android:layout_marginEnd="@dimen/dp16"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/dp16"
             android:layout_marginRight="@dimen/dp16">
 
             <TextView
                 android:id="@+id/badgeView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:textColor="@color/white"
-                android:visibility="gone"
-                tools:visibility="visible"
-                tools:text="1"
-                android:gravity="center"
-                android:textSize="@dimen/sp12"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_gravity="end"
                 android:background="@drawable/badge"
-                android:layout_alignParentRight="true" />
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp12"
+                android:visibility="gone"
+                tools:text="1"
+                tools:visibility="visible" />
 
             <com.rescribe.doctor.ui.customesViews.CustomTextView
                 android:id="@+id/paidStatusTextView"
