--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,7 +25,8 @@
     <dimen name="sp15">15sp</dimen>
     <dimen name="sp17">17sp</dimen>
     <dimen name="dp48">48dp</dimen>
-    <dimen name="dp68">68dp</dimen>
+    <dimen name="margin_imageview">70dp</dimen>
     <dimen name="dp34">34dp</dimen>
     <dimen name="dp14">14dp</dimen>
+    <dimen name="dp18">18dp</dimen>
 </resources>
