--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,6 @@
     <dimen name="dp34">34dp</dimen>
     <dimen name="dp14">14dp</dimen>
     <dimen name="dp18">18dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="dp9">9dp</dimen>
 </resources>
