--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="Red">#FF0000</color>
     <color name="tagColor">#04abdf</color>
     <color name="statusbar">#0077a7</color>
+    <color name="switch_button_color">#9B9B9B</color>
     <color name="white">#ffffff</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
