added splash screen for chat

--- a/app/src/main/res/layouts/patient/layout/activity_patient_connect.xml
+++ b/app/src/main/res/layouts/patient/layout/activity_patient_connect.xml
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center|left"
-                android:text="@string/doctor_connect"
+                android:text="@string/patient_connect"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp16"
                 android:visibility="visible"
