--- a/app/src/main/res/drawable-mdpi-v11/unchked_switch.xml
+++ b/app/src/main/res/drawable-mdpi-v11/unchked_switch.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/switch_button_color" />
     <corners android:radius="14dp" />
-    <size android:width="68dp" android:height="28dp"/>
+    <size
+        android:width="68dp"
+        android:height="28dp" />
 </shape>
