--- a/app/src/main/res/drawable/circular_bullet.xml
+++ b/app/src/main/res/drawable/circular_bullet.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/recentblue" />
+    <solid android:color="@color/menu_blue_dot" />
 
     <size
         android:width="120dp"
         android:height="120dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/recentblue" />
+        android:color="@color/menu_blue_dot" />
 </shape>
