--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -2,4 +2,12 @@
 <resources>
     <dimen name="dp57">57dp</dimen>
     <dimen name="sp19">19sp</dimen>
+    <dimen name="dp21">21dp</dimen>
+    <dimen name="dp25">25dp</dimen>
+    <dimen name="dp3">3dp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp90">90dp</dimen>
+    <dimen name="dp51">51dp</dimen>
+    <dimen name="dp17">17dp</dimen>
+    <dimen name="dp69">69dp</dimen>
 </resources>
