--- a/app/src/main/res/layouts/patient_appointment/layout/my_patients_base_layout.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_patients_base_layout.xml
@@ -7,7 +7,9 @@
     tools:openDrawer="end">
 
     <include
-        layout="@layout/common_action_bar" />
+        layout="@layout/common_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <FrameLayout
         android:id="@+id/viewContainer"
