--- a/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -32,15 +32,18 @@
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:id="@+id/clinicAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
+            android:paddingTop="@dimen/dp3"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/clinicNameTextView"
             android:layout_toRightOf="@id/clinicNameTextView"
-            android:textColor="@color/black"
+            android:textColor="@color/clinic_address_color"
             android:textSize="@dimen/sp13"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:customFont="@string/roboto_medium"
-            tools:text="Worli, Mumbai" />
+            tools:text="Worli, Mumbaifgfdgfdgfgf" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -70,11 +73,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:paddingStart="@dimen/dp3"
                 android:layout_toEndOf="@id/clinicPatientCount"
                 android:layout_toRightOf="@id/clinicPatientCount"
-                android:paddingBottom="@dimen/dp5"
+               android:layout_marginBottom="@dimen/dp4"
                 android:src="@drawable/appointment_count_arrow"
-                tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+                tools:ignore="ContentDescription,ObsoleteLayoutParam"
+                android:paddingLeft="@dimen/dp3" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -119,6 +124,7 @@
             <com.rescribe.doctor.ui.customesViews.CustomTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/appointmentTime"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/dp16"
@@ -134,6 +140,7 @@
                 tools:visibility="gone" />
 
             <ImageView
+                android:id="@+id/chatImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -148,6 +155,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginBottom="@dimen/dp6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -215,6 +223,8 @@
             </LinearLayout>
 
             <CheckBox
+                tools:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -245,7 +255,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp34"
+                android:layout_marginLeft="@dimen/dp28"
+                android:layout_marginStart="@dimen/dp28"
                 android:drawableLeft="@drawable/mobile_icon"
                 android:drawablePadding="@dimen/dp9"
                 android:drawableStart="@drawable/mobile_icon"
@@ -260,18 +271,21 @@
                 android:layout_width="@dimen/dp1"
                 android:layout_height="@dimen/dp20"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp34"
-                android:layout_marginStart="@dimen/dp34"
+                android:layout_marginLeft="@dimen/dp32"
+                android:layout_marginStart="@dimen/dp32"
                 android:layout_toEndOf="@id/patientPhoneNumber"
                 android:layout_toRightOf="@id/patientPhoneNumber"
                 android:background="@color/tagColor" />
 
             <LinearLayout
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp37"
-                android:layout_marginStart="@dimen/dp37"
+                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginStart="@dimen/dp20"
+                android:layout_marginEnd="@dimen/dp10"
+                android:layout_marginRight="@dimen/dp10"
                 android:layout_toEndOf="@id/separatorView"
                 android:layout_toRightOf="@id/separatorView"
                 android:orientation="horizontal">
@@ -279,7 +293,8 @@
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/outstandingAmountTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp11"
                     app:customFont="@string/roboto_medium"
@@ -290,9 +305,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/rating_color"
-                    android:textSize="@dimen/sp11"
-                    app:customFont="@string/roboto_medium"
-                    tools:text=" NIL" />
+                    android:textSize="@dimen/sp12"
+                    android:layout_gravity="center"
+                    app:customFont="@string/roboto_bold"
+                    tools:text=" Rs.450/-" />
 
             </LinearLayout>
         </RelativeLayout>
