--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="dp17">17dp</dimen>
     <dimen name="dp69">69dp</dimen>
     <dimen name="sp10">10sp</dimen>
+    <dimen name="dp28">28dp</dimen>
+    <dimen name="dp32">32dp</dimen>
 </resources>
