--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="placeHolder">#55000000</color>
     <item name="errorColor" type="color">#BD362F</item>
     <color name="recentblue">#04abdf</color>
+    <color name="clinic_address_color">#5f5f5f</color>
     <color name="menu_blue_dot">#499bc8</color>
     <color name="drawer_menu_text_color">#646464</color>
     <color name="black">#000000</color>
@@ -21,6 +22,8 @@
     <color name="dashboard_text_color">#995b5b5b</color>
     <color name="dashboard_menu_text_color">#5b5b5b</color>
     <color name="white">#ffffff</color>
+    <color name="complete_color">#6cbb8e</color>
+    <color name="book_color">#63c3d7</color>
     <color name="gender_drawer">#cacaca</color>
     <color name="choose_option_color">#6e6e6e</color>
     <color name="dashboard_divider_color">#98abb3</color>
