--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,4 +53,6 @@
     <dimen name="dp23">23dp</dimen>
     <dimen name="dp69">69dp</dimen>
     <dimen name="sp10">10sp</dimen>
+    <dimen name="dp28">28dp</dimen>
+    <dimen name="dp32">32dp</dimen>
 </resources>
